tests/reference/asr-intrinsics_03-f6b3e89.stderr
semantic error: `pos` argument of `ibclr` intrinsic must be non-negative
 --> tests/errors/intrinsics_03.f90:2:14
  |
2 |     print *, ibclr(1, -2)
  |              ^^^^^^^^^^^^ 
